--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,6 +1,6 @@
 <footer id= "footer" class="footer">
       <div class="container">
-        <a href="https://github.com/julioxus"><p class="text-muted">Julio Martínez Martínez-Checa</p></a>
-        <a href="http://www.ugr.es/"><p class="text-muted">Universidad de Granada</p></a>
+		<a href="https://github.com/julioxus"><p class="text-muted">Julio Martínez Martínez-Checa</p></a></li>
+	    <a id="ugr_link" href="http://www.ugr.es/"><p class="text-muted">Universidad de Granada</p></a></li>
       </div>
 </footer>
