--- a/src/template/google_page_view.html
+++ b/src/template/google_page_view.html
@@ -4,135 +4,137 @@
   {{head|safe}}
   
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Spiderbot</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li class="active"><a href="/reports">Reports</a></li>
-            <li><a href="/ranking-reports">Ranking Reports</a></li>
-            <li><a href="/rankings">Rankings</a></li>
-            {% if user.group == 'Admin' %}
-            <li><a href="/users">Users</a>
-            {% endif %}
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
-          {% if user.lock %}
-          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
-          {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    
-    <div id="progress-bar" class="progress progress-striped active">
-	  <div id="pbar" class="progress-bar" role="progressbar"
-	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: {{progress}}%">
-	    <span class="sr-only"></span>
-	  </div>
+	<div id="wrap">
+		<div id="content">
+		    <nav class="navbar navbar-inverse navbar-fixed-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Spiderbot</a>
+		        </div>
+		        <div id="navbar" class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li><a href="/">Home</a></li>
+		            <li class="active"><a href="/reports">Reports</a></li>
+		            <li><a href="/ranking-reports">Ranking Reports</a></li>
+		            <li><a href="/rankings">Rankings</a></li>
+		            {% if user.group == 'Admin' %}
+		            <li><a href="/users">Users</a>
+		            {% endif %}
+		            <li><a href="#about">About</a></li>
+		            <li><a href="#contact">Contact</a></li>
+		          </ul>
+		          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+		          {% if user.lock %}
+		          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+		          {% endif %}
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
+		    
+		    <div id="progress-bar" class="progress progress-striped active">
+			  <div id="pbar" class="progress-bar" role="progressbar"
+			       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+			       style="width: {{progress}}%">
+			    <span class="sr-only"></span>
+			  </div>
+			</div>
+		
+		    <div class="container">
+		
+		      <div class="starter-template">
+		        <h1><a href="report.web">{{web}}</a></h1>
+		      </div>
+		
+		    </div><!-- /.container -->
+		    <div class="container" id="google_reports_container">
+				<div id="usability">
+			  <h1>USABILITY</h1>
+			  	<div id="score_row">
+			  		<p>Score: {{scoreUsability}}/100</p>
+			  	</div>
+			  	{% for i in range(types|length) %}
+			  		{% if types[i] == 'USABILITY' %}
+				  		<table>
+						  	<tr>
+						  		<th colspan="2">{{ruleNames[i]}}</th>
+						  	</tr>
+						  	<tr>
+						  		<th>Impact</th>
+						  		<td>{{ruleImpacts[i]}}</td>
+						  	</tr>
+						  	<tr>
+						  		<th>Summary</th>
+						  		<td>{{summaries[i]|safe}}</td>
+						  	</tr>
+						</table>
+				  		{% if urlBlocks[i]|length != 0 %}
+				  			<table class="urlBlock">
+			  					{% for block in urlBlocks[i] %}
+				  				<tr>
+				  					<th>{{block['urlBlockHeader']|safe}}</th>
+				  				</tr>
+					  				{% for url in block['urlBlockUrlsList'] %}
+					  				<tr>
+					  					<td>{{url}}</td>
+					  				</tr>
+					  				{% endfor %}
+					  			{% endfor %}
+				  			</table>
+				  		{% endif %}
+				  	{% endif %}
+			  	{% endfor %}
+		  </div>
+		  </div>
+		  
+		  <div class="container" id="google_reports_container">
+		  <div id="speed">
+			  <h1>SPEED</h1>
+			  	<div id="score_row">
+			  		<p>Score: {{scoreSpeed}}/100</p>
+			  	</div>
+			  	{% for i in range(types|length) %}
+			  		{% if types[i] == 'SPEED' %}
+				  		<table>
+						  	<tr>
+						  		<th colspan="2">{{ruleNames[i]}}</th>
+						  	</tr>
+						  	<tr>
+						  		<th>Impact</th>
+						  		<td>{{ruleImpacts[i]}}</td>
+						  	</tr>
+						  	<tr>
+						  		<th>Summary</th>
+						  		<td>{{summaries[i]|safe}}</td>
+						  	</tr>
+						</table>
+						
+				  		{% if urlBlocks[i]|length != 0 %}
+				  			<table class="urlBlock">
+			  					{% for block in urlBlocks[i] %}
+				  				<tr>
+				  					<th>{{block['urlBlockHeader']|safe}}</th>
+				  				</tr>
+					  				{% for url in block['urlBlockUrlsList'] %}
+					  				<tr>
+					  					<td>{{url}}</td>
+					  				</tr>
+					  				{% endfor %}
+					  			{% endfor %}
+				  			</table>
+				  		{% endif %}
+				  	{% endif %}
+			  	{% endfor %}
+		  </div>
+			</div>
+		</div>
+		{{footer|safe}}
 	</div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1><a href="report.web">{{web}}</a></h1>
-      </div>
-
-    </div><!-- /.container -->
-    <div class="container" id="google_reports_container">
-		<div id="usability">
-	  <h1>USABILITY</h1>
-	  	<div id="score_row">
-	  		<p>Score: {{scoreUsability}}/100</p>
-	  	</div>
-	  	{% for i in range(types|length) %}
-	  		{% if types[i] == 'USABILITY' %}
-		  		<table>
-				  	<tr>
-				  		<th colspan="2">{{ruleNames[i]}}</th>
-				  	</tr>
-				  	<tr>
-				  		<th>Impact</th>
-				  		<td>{{ruleImpacts[i]}}</td>
-				  	</tr>
-				  	<tr>
-				  		<th>Summary</th>
-				  		<td>{{summaries[i]|safe}}</td>
-				  	</tr>
-				</table>
-		  		{% if urlBlocks[i]|length != 0 %}
-		  			<table class="urlBlock">
-	  					{% for block in urlBlocks[i] %}
-		  				<tr>
-		  					<th>{{block['urlBlockHeader']|safe}}</th>
-		  				</tr>
-			  				{% for url in block['urlBlockUrlsList'] %}
-			  				<tr>
-			  					<td>{{url}}</td>
-			  				</tr>
-			  				{% endfor %}
-			  			{% endfor %}
-		  			</table>
-		  		{% endif %}
-		  	{% endif %}
-	  	{% endfor %}
-  </div>
-  </div>
-  
-  <div class="container" id="google_reports_container">
-  <div id="speed">
-	  <h1>SPEED</h1>
-	  	<div id="score_row">
-	  		<p>Score: {{scoreSpeed}}/100</p>
-	  	</div>
-	  	{% for i in range(types|length) %}
-	  		{% if types[i] == 'SPEED' %}
-		  		<table>
-				  	<tr>
-				  		<th colspan="2">{{ruleNames[i]}}</th>
-				  	</tr>
-				  	<tr>
-				  		<th>Impact</th>
-				  		<td>{{ruleImpacts[i]}}</td>
-				  	</tr>
-				  	<tr>
-				  		<th>Summary</th>
-				  		<td>{{summaries[i]|safe}}</td>
-				  	</tr>
-				</table>
-				
-		  		{% if urlBlocks[i]|length != 0 %}
-		  			<table class="urlBlock">
-	  					{% for block in urlBlocks[i] %}
-		  				<tr>
-		  					<th>{{block['urlBlockHeader']|safe}}</th>
-		  				</tr>
-			  				{% for url in block['urlBlockUrlsList'] %}
-			  				<tr>
-			  					<td>{{url}}</td>
-			  				</tr>
-			  				{% endfor %}
-			  			{% endfor %}
-		  			</table>
-		  		{% endif %}
-		  	{% endif %}
-	  	{% endfor %}
-  </div>
-	</div>
-	
-	{{footer|safe}}
 	
 
     <!-- Bootstrap core JavaScript
