--- a/src/template/google_report_view.html
+++ b/src/template/google_report_view.html
@@ -3,90 +3,92 @@
   {{head|safe}}
 
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Spiderbot</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li class="active"><a href="/reports">Reports</a></li>
-            <li><a href="/ranking-reports">Ranking Reports</a></li>
-            <li><a href="/rankings">Rankings</a></li>
-            {% if user.group == 'Admin' %}
-            <li><a href="/users">Users</a>
-            {% endif %}
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
-          {% if user.lock %}
-          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
-          {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    
-    <div id="progress-bar" class="progress progress-striped active">
-	  <div id="pbar" class="progress-bar" role="progressbar"
-	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: {{progress}}%">
-	    <span class="sr-only"></span>
-	  </div>
-	</div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1><a href="{{report.web}}">{{report.web}}</a></h1>
-      </div>
-
-    </div><!-- /.container -->
-    <div class="container" id="reports_container">
-		<p>Validation type: {{report.validation_type}}</p>
-		<p>Only domain?: {% if report.onlyDomain %} Yes {% else %} No {% endif %}</p>
-		<p>Pages: {{pages}}</p>
-		<br/>
-		<p>Usability Score: {{report.scoreUsability}}</p>
-		<p>Speed Score: {{report.scoreSpeed}}</p>
-		<br/>
-		<p>Date: {{report.date}}</p>
-		<p>Saved at: {{report.time}}</p>
-		<br/><br/>
-		<p>Validation executed by: {{report.user}}</p>
+	<div id="wrap">
+		<div id="content">
+		    <nav class="navbar navbar-inverse navbar-fixed-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Spiderbot</a>
+		        </div>
+		        <div id="navbar" class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li><a href="/">Home</a></li>
+		            <li class="active"><a href="/reports">Reports</a></li>
+		            <li><a href="/ranking-reports">Ranking Reports</a></li>
+		            <li><a href="/rankings">Rankings</a></li>
+		            {% if user.group == 'Admin' %}
+		            <li><a href="/users">Users</a>
+		            {% endif %}
+		            <li><a href="#about">About</a></li>
+		            <li><a href="#contact">Contact</a></li>
+		          </ul>
+		          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+		          {% if user.lock %}
+		          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+		          {% endif %}
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
+		    
+		    <div id="progress-bar" class="progress progress-striped active">
+			  <div id="pbar" class="progress-bar" role="progressbar"
+			       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+			       style="width: {{progress}}%">
+			    <span class="sr-only"></span>
+			  </div>
+			</div>
 		
-		<h1 id="rankingPositionNumber">{{report.score}}</h1>
+		    <div class="container">
+		
+		      <div class="starter-template">
+		        <h1><a href="{{report.web}}">{{report.web}}</a></h1>
+		      </div>
+		
+		    </div><!-- /.container -->
+		    <div class="container" id="reports_container">
+				<p>Validation type: {{report.validation_type}}</p>
+				<p>Only domain?: {% if report.onlyDomain %} Yes {% else %} No {% endif %}</p>
+				<p>Pages: {{pages}}</p>
+				<br/>
+				<p>Usability Score: {{report.scoreUsability}}</p>
+				<p>Speed Score: {{report.scoreSpeed}}</p>
+				<br/>
+				<p>Date: {{report.date}}</p>
+				<p>Saved at: {{report.time}}</p>
+				<br/><br/>
+				<p>Validation executed by: {{report.user}}</p>
+				
+				<h1 id="rankingPositionNumber">{{report.score}}</h1>
+			</div>
+			
+			<div id="reportResultsContainer">
+				<button class="buttonTitle" id="reportResultsTitle"><h3>Analysis by web documents</h3></button>
+				<table class="report_results_table">
+				<tr>
+					<th>URL</th>
+					<th>Usability score</th>
+					<th>Speed score</th>
+					<th>Details</th>
+				</tr>
+				{% for result in report.results %}
+					<tr>
+						<td><a href="{{result.url}}">{{result.url}}</a></td>
+						<td><span>{{result.scoreUsability}}</span></td>
+						<td><span>{{result.scoreSpeed}}</span></td>
+						<td><a href="google-viewpage?id={{report.key.id()}}&number={{result.number}}"><img id="analyze-img" src="static/images/analyze-data.png"/></a></td>
+					</tr>
+				{% endfor %}
+				</table>
+			</div>
+		</div>
+		{{footer|safe}}
 	</div>
-	
-	<div id="reportResultsContainer">
-		<button class="buttonTitle" id="reportResultsTitle"><h3>Analysis by web documents</h3></button>
-		<table class="report_results_table">
-		<tr>
-			<th>URL</th>
-			<th>Usability score</th>
-			<th>Speed score</th>
-			<th>Details</th>
-		</tr>
-		{% for result in report.results %}
-			<tr>
-				<td><a href="{{result.url}}">{{result.url}}</a></td>
-				<td><span>{{result.scoreUsability}}</span></td>
-				<td><span>{{result.scoreSpeed}}</span></td>
-				<td><a href="google-viewpage?id={{report.key.id()}}&number={{result.number}}"><img id="analyze-img" src="static/images/analyze-data.png"/></a></td>
-			</tr>
-		{% endfor %}
-		</table>
-	</div>
-	
-	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
