--- a/src/template/ranking_reports.html
+++ b/src/template/ranking_reports.html
@@ -4,89 +4,91 @@
   {{head|safe}}
 
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Spiderbot</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/reports">Reports</a></li>
-            <li class="active"><a href="/ranking-reports">Ranking Reports</a></li>
-            <li><a href="/rankings">Rankings</a></li>
-            {% if user.group == 'Admin' %}
-            <li><a href="/users">Users</a>
-            {% endif %}
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
-          {% if user.lock %}
-          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
-          {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    
-    <div id="progress-bar" class="progress progress-striped active">
-	  <div id="pbar" class="progress-bar" role="progressbar"
-	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: {{progress}}%">
-	    <span class="sr-only"></span>
-	  </div>
-	</div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Ranking Reports</h1>
-        {% if error_message %}
-	        <br/>
-	        <div class="alert alert-danger" id="error_message">
-				<p>{{error_message}}</p>
-		  	</div>
-		{% endif %}
-      </div>
-    </div><!-- /.container -->
-    <div class="container" id="reports_main_container">
-    {% for report in reports %}
-    	<div id=report">
-    		{% if user.group == 'Admin' %}
-    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
-    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-ranking-report" method="POST">
-	    		<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
-	    	</form>
-	    	{% endif %}
-    		<table id="report_table">
-    			<td><a href="ranking-reports-viewer?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
-    			<td>
-			    	<table id="report_subtable">
-			    		<tr>
-							<th>Web</th>
-							<td><a href="{{report.web}}">{{report.web}}</a></td>
-						</tr>
-							<th>Score</th>
-							<td>{{report.score}}</td>
-						<tr>
-							<th>Executed by</th>
-							<td>{{report.user}}</td>
-						</tr>
+	<div id="wrap">
+		<div id="content">
+		    <nav class="navbar navbar-inverse navbar-fixed-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Spiderbot</a>
+		        </div>
+		        <div id="navbar" class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li><a href="/">Home</a></li>
+		            <li><a href="/reports">Reports</a></li>
+		            <li class="active"><a href="/ranking-reports">Ranking Reports</a></li>
+		            <li><a href="/rankings">Rankings</a></li>
+		            {% if user.group == 'Admin' %}
+		            <li><a href="/users">Users</a>
+		            {% endif %}
+		            <li><a href="#about">About</a></li>
+		            <li><a href="#contact">Contact</a></li>
+		          </ul>
+		          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+		          {% if user.lock %}
+		          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+		          {% endif %}
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
+		    
+		    <div id="progress-bar" class="progress progress-striped active">
+			  <div id="pbar" class="progress-bar" role="progressbar"
+			       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+			       style="width: {{progress}}%">
+			    <span class="sr-only"></span>
+			  </div>
+			</div>
+		
+		    <div class="container">
+		
+		      <div class="starter-template">
+		        <h1>Ranking Reports</h1>
+		        {% if error_message %}
+			        <br/>
+			        <div class="alert alert-danger" id="error_message">
+						<p>{{error_message}}</p>
+				  	</div>
+				{% endif %}
+		      </div>
+		    </div><!-- /.container -->
+		    <div class="container" id="reports_main_container">
+		    {% for report in reports %}
+		    	<div id=report">
+		    		{% if user.group == 'Admin' %}
+		    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
+		    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-ranking-report" method="POST">
+			    		<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
+			    	</form>
+			    	{% endif %}
+		    		<table id="report_table">
+		    			<td><a href="ranking-reports-viewer?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+		    			<td>
+					    	<table id="report_subtable">
+					    		<tr>
+									<th>Web</th>
+									<td><a href="{{report.web}}">{{report.web}}</a></td>
+								</tr>
+									<th>Score</th>
+									<td>{{report.score}}</td>
+								<tr>
+									<th>Executed by</th>
+									<td>{{report.user}}</td>
+								</tr>
+							</table>
+						</td>
 					</table>
-				</td>
-			</table>
+				</div>
+			{% endfor %}
+			</div>
 		</div>
-	{% endfor %}
+		{{footer|safe}}
 	</div>
-	
-	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
