--- a/src/template/report_view.html
+++ b/src/template/report_view.html
@@ -4,140 +4,142 @@
   <script src="static/js/jquery.min.js"></script>
 
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Spiderbot</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li class="active"><a href="/reports">Reports</a></li>
-            <li><a href="/ranking-reports">Ranking Reports</a></li>
-            <li><a href="/rankings">Rankings</a></li>
-            {% if user.group == 'Admin' %}
-            <li><a href="/users">Users</a>
-            {% endif %}
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
-          {% if user.lock %}
-          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
-          {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    
-    <div id="progress-bar" class="progress progress-striped active">
-	  <div id="pbar" class="progress-bar" role="progressbar"
-	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: {{progress}}%">
-	    <span class="sr-only"></span>
-	  </div>
-	</div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1><a href="{{report.web}}">{{report.web}}</a></h1>
-      </div>
-
-    </div><!-- /.container -->
-    <div class="container" id="reports_container">
-		<p>Validation type: {{report.validation_type}}</p>
-		<p>Only domain?: {% if report.onlyDomain %} Yes {% else %} No {% endif %}</p>
-		<p>Pages: {{pages}}</p>
-		<br/>
-		<p>Pages with errors: {{report.error_pages}}</p>
-		<p>Total errors: {{report.errors}}</p>
-		<p>Distinct errors: {{list_errors|length}}</p>
-		<br/>
-		<p>Date: {{report.date}}</p>
-		<p>Saved at: {{report.time}}</p>
-		<br/><br/>
-		<p>Validation executed by: {{report.user}}</p>
+	<div id="wrap">
+		<div id="content">
+		    <nav class="navbar navbar-inverse navbar-fixed-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Spiderbot</a>
+		        </div>
+		        <div id="navbar" class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li><a href="/">Home</a></li>
+		            <li class="active"><a href="/reports">Reports</a></li>
+		            <li><a href="/ranking-reports">Ranking Reports</a></li>
+		            <li><a href="/rankings">Rankings</a></li>
+		            {% if user.group == 'Admin' %}
+		            <li><a href="/users">Users</a>
+		            {% endif %}
+		            <li><a href="#about">About</a></li>
+		            <li><a href="#contact">Contact</a></li>
+		          </ul>
+		          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+		          {% if user.lock %}
+		          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+		          {% endif %}
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
+		    
+		    <div id="progress-bar" class="progress progress-striped active">
+			  <div id="pbar" class="progress-bar" role="progressbar"
+			       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+			       style="width: {{progress}}%">
+			    <span class="sr-only"></span>
+			  </div>
+			</div>
 		
-		<h1 id="rankingPositionNumber">{{report.score}}</h1>
-	</div>
-	<div id ="errorTableContainer">
-		<button class="buttonTitle" id="errorsTitle"><h3>Common errors</h3></button>
-		<table class="errorTable">
-		<tr>
-			<th>Message</th>
-			<th>Lines and pages</th>
-		</tr>
-	{% for error in list_errors %}
-		<tr>
-			<td>{{error[0]}}</td>
-			<td>
-				<table id="errorSubtable{{loop.index}}" class="errorSubtable">
+		    <div class="container">
+		
+		      <div class="starter-template">
+		        <h1><a href="{{report.web}}">{{report.web}}</a></h1>
+		      </div>
+		
+		    </div><!-- /.container -->
+		    <div class="container" id="reports_container">
+				<p>Validation type: {{report.validation_type}}</p>
+				<p>Only domain?: {% if report.onlyDomain %} Yes {% else %} No {% endif %}</p>
+				<p>Pages: {{pages}}</p>
+				<br/>
+				<p>Pages with errors: {{report.error_pages}}</p>
+				<p>Total errors: {{report.errors}}</p>
+				<p>Distinct errors: {{list_errors|length}}</p>
+				<br/>
+				<p>Date: {{report.date}}</p>
+				<p>Saved at: {{report.time}}</p>
+				<br/><br/>
+				<p>Validation executed by: {{report.user}}</p>
+				
+				<h1 id="rankingPositionNumber">{{report.score}}</h1>
+			</div>
+			<div id ="errorTableContainer">
+				<button class="buttonTitle" id="errorsTitle"><h3>Common errors</h3></button>
+				<table class="errorTable">
+				<tr>
+					<th>Message</th>
+					<th>Lines and pages</th>
+				</tr>
+			{% for error in list_errors %}
+				<tr>
+					<td>{{error[0]}}</td>
+					<td>
+						<table id="errorSubtable{{loop.index}}" class="errorSubtable">
+							<tr>
+								<th>Line</th>
+								<th>Page</th>
+							</tr>
+							{% for i in range(error[1]|length) %}
+							<tr>
+								<td>{{error[1][i]}}</td>
+								<td><a href="{{error[2][i]}}">{{error[2][i]}}</a></td>
+							</tr>
+							{% endfor %}
+						</table>
+						<button id="show{{loop.index}}" class="btn btn-info">Show</button>
+						<script>
+						$(document).ready(function(){
+							$("#show{{loop.index}}").click(function(){
+								if ($("#errorSubtable{{loop.index}}").is(":visible")){
+							        $("#errorSubtable{{loop.index}}").hide(400);
+							        $(this).attr("class","btn btn-info");
+							        $(this).text("Show");
+							    }
+							    else{
+							    	$("#errorSubtable{{loop.index}}").show(400);
+							    	$(this).attr("class","btn btn-danger");
+							        $(this).text("Hide");
+							    }
+						    });
+						});
+						</script>
+					</td>
+				</tr>
+			{% endfor %}
+			</table>
+			</div>
+			
+			<div id="reportResultsContainer">
+				<button class="buttonTitle" id="reportResultsTitle"><h3>Analysis by web documents</h3></button>
+				<table class="report_results_table">
+				<tr>
+					<th>URL</th>
+					<th>Result</th>
+					<th>Details</th>
+				</tr>
+				{% for result in report.results %}
 					<tr>
-						<th>Line</th>
-						<th>Page</th>
+						<td><a href="{{result.url}}">{{result.url}}</a></td>
+						{% if result.state=="PASS" %}
+							<td><span style="color: green">{{result.state}}</span></td>
+						{% elif result.state=="FAIL" %}
+							<td><span style="color: orange">{{result.state}}</span></td>
+						{% elif result.state=="ERROR" %}
+							<td><span style="color: red">{{result.state}}</span></td>
+						{% endif %}
+						<td><a href="viewpage?id={{report.key.id()}}&number={{result.number}}"><img id="analyze-img" src="static/images/analyze-data.png"/></a></td>
 					</tr>
-					{% for i in range(error[1]|length) %}
-					<tr>
-						<td>{{error[1][i]}}</td>
-						<td><a href="{{error[2][i]}}">{{error[2][i]}}</a></td>
-					</tr>
-					{% endfor %}
+				{% endfor %}
 				</table>
-				<button id="show{{loop.index}}" class="btn btn-info">Show</button>
-				<script>
-				$(document).ready(function(){
-					$("#show{{loop.index}}").click(function(){
-						if ($("#errorSubtable{{loop.index}}").is(":visible")){
-					        $("#errorSubtable{{loop.index}}").hide(400);
-					        $(this).attr("class","btn btn-info");
-					        $(this).text("Show");
-					    }
-					    else{
-					    	$("#errorSubtable{{loop.index}}").show(400);
-					    	$(this).attr("class","btn btn-danger");
-					        $(this).text("Hide");
-					    }
-				    });
-				});
-				</script>
-			</td>
-		</tr>
-	{% endfor %}
-	</table>
+			</div>
+		</div>
+		{{footer|safe}}
 	</div>
-	
-	<div id="reportResultsContainer">
-		<button class="buttonTitle" id="reportResultsTitle"><h3>Analysis by web documents</h3></button>
-		<table class="report_results_table">
-		<tr>
-			<th>URL</th>
-			<th>Result</th>
-			<th>Details</th>
-		</tr>
-		{% for result in report.results %}
-			<tr>
-				<td><a href="{{result.url}}">{{result.url}}</a></td>
-				{% if result.state=="PASS" %}
-					<td><span style="color: green">{{result.state}}</span></td>
-				{% elif result.state=="FAIL" %}
-					<td><span style="color: orange">{{result.state}}</span></td>
-				{% elif result.state=="ERROR" %}
-					<td><span style="color: red">{{result.state}}</span></td>
-				{% endif %}
-				<td><a href="viewpage?id={{report.key.id()}}&number={{result.number}}"><img id="analyze-img" src="static/images/analyze-data.png"/></a></td>
-			</tr>
-		{% endfor %}
-		</table>
-	</div>
-	
-	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
