--- a/src/template/users.html
+++ b/src/template/users.html
@@ -4,150 +4,153 @@
   {{head|safe}}
 
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Spiderbot</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/reports">Reports</a></li>
-            <li><a href="/ranking-reports">Ranking Reports</a></li>
-            <li><a href="/rankings">Rankings</a></li>
-            <li class="active"><a href="/users">Users</a>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
-          {% if user.lock %}
-          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
-          {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    
-    <div id="progress-bar" class="progress progress-striped active">
-	  <div id="pbar" class="progress-bar" role="progressbar"
-	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: {{progress}}%">
-	    <span class="sr-only"></span>
-	  </div>
-	</div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Users</h1>
-        {% if error_message %}
-	        <br/>
-	        <div class="alert alert-danger" id="error_message">
-				<p>{{error_message}}</p>
-		  	</div>
-	  </div>
-		{% endif %}
-       <div class="container" id="reports_main_container">
-       	<table>
-       		<tr>
-       			<th>User name</th>
-       			<th>Name</th>
-       			<th>Email</th>
-       			<th>Group</th>
-       		</tr>
-       		{% for user in users %}
-       		<tr>
-       			<td>{{user.name}}</td>
-       			<td>{{user.full_name}}</td>
-       			<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
-       			<td>{{user.group}}</td>
-       			<td><button id="buttonEdit-{{user.name}}" class="btn btn-info">Edit</button></td>
-       			<td><button id="buttonDelete-{{user.name}}" class="btn btn-danger">Delete</button></td>
-       			<form id="form-delete-{{user.name}}" role="form" action="/delete-user" method="post">
-         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
-        		</form>
-       		</tr>
-       		<tr>
-       			<td id="edit-{{user.name}}" colspan="6">
-       				<div class="container" id="form-edit">
-	         		<form id="form-edit" role="form" action="/edit-user" method="post">
-	         			<table>
-	         			<tr>
-		         			<td><label for="edit-full_name">Full name:</label></td>
-				         	<td><input type="text" id="edit-full_name" name="edit-full_name" value="{{user.full_name}}"/></td>
-			         	</tr>
-			         	<tr>
-		         			<td><label for="edit-email">Email:</label></td>
-			         		<td><input type="email" id="edit-email" name="edit-email" value="{{user.email}}"/></td>
-	         			<tr>
-	         				<td><label for="edit-group">Group:</label>
-		         			<td><select id="edit-group" name="edit-group">
-		         			{% if user.group == 'User' %}
-		         			<option value="User" selected>User</option>
-		         			<option value="Admin">Admin</option>
-		         			{% else %}
-		         			<option value="User">User</option>
-		         			<option value="Admin" selected>Admin</option>
-		         			{% endif %}
-							</select></td>
-		         		</tr>
-		         		<tr>
-		         			<td><label for="edit-password">Password:</label></td>
-			         		<td><input type="password" id="edit-password" name="edit-password"/></td>
-		         		</tr>
+	<div id="wrap">
+		<div id="content">
+		    <nav class="navbar navbar-inverse navbar-fixed-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Spiderbot</a>
+		        </div>
+		        <div id="navbar" class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li><a href="/">Home</a></li>
+		            <li><a href="/reports">Reports</a></li>
+		            <li><a href="/ranking-reports">Ranking Reports</a></li>
+		            <li><a href="/rankings">Rankings</a></li>
+		            <li class="active"><a href="/users">Users</a>
+		            <li><a href="#about">About</a></li>
+		            <li><a href="#contact">Contact</a></li>
+		          </ul>
+		          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+		          {% if user.lock %}
+		          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+		          {% endif %}
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
+		    
+		    <div id="progress-bar" class="progress progress-striped active">
+			  <div id="pbar" class="progress-bar" role="progressbar"
+			       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+			       style="width: {{progress}}%">
+			    <span class="sr-only"></span>
+			  </div>
+			</div>
+		
+		    <div class="container">
+		
+		      <div class="starter-template">
+		        <h1>Users</h1>
+		        {% if error_message %}
+			        <br/>
+			        <div class="alert alert-danger" id="error_message">
+						<p>{{error_message}}</p>
+				  	</div>
+			  </div>
+				{% endif %}
+		       <div class="container" id="reports_main_container">
+		       	<table>
+		       		<tr>
+		       			<th>User name</th>
+		       			<th>Name</th>
+		       			<th>Email</th>
+		       			<th>Group</th>
+		       		</tr>
+		       		{% for user in users %}
+		       		<tr>
+		       			<td>{{user.name}}</td>
+		       			<td>{{user.full_name}}</td>
+		       			<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
+		       			<td>{{user.group}}</td>
+		       			<td><button id="buttonEdit-{{user.name}}" class="btn btn-info">Edit</button></td>
+		       			<td><button id="buttonDelete-{{user.name}}" class="btn btn-danger">Delete</button></td>
+		       			<form id="form-delete-{{user.name}}" role="form" action="/delete-user" method="post">
 		         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
-		         		<tr>
-		         			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
-		         		</tr>
-		         		</table>
-	         		</form>
-         		</div>
-        		</td>
-       		</tr>
-       	{% endfor %}
-       	</table>
-       	<div class="container" id="form-create">
-       		<form id="form-create" name="form-create" role="form" action="/create-user" method="post" onsubmit="return validateForm()">
-       			<table>
-       			<tr>
-        			<td><label for="create-name">User name:</label></td>
-	         	<td><input type="text" id="create-name" name="create-name" required/></td>
-         	</tr>
-       			<tr>
-        			<td><label for="create-full_name">Full name:</label></td>
-	         	<td><input type="text" id="create-full_name" name="create-full_name" required/></td>
-         	</tr>
-         	<tr>
-        			<td><label for="create-email">Email:</label></td>
-         		<td><input type="email" id="edit-email" name="create-email"/></td>
-       			<tr>
-       				<td><label for="create-group">Group:</label>
-        			<td><select id="create-group" name="create-group">
-        			<option value="User">User</option>
-				<option value="Admin">Admin</option>
-				</select></td>
-        		</tr>
-        		<tr>
-        			<td><label for="create-password">Password:</label></td>
-         		<td><input type="password" id="create-password" name="create-password" required/></td>
-        		</tr>
-        		<tr>
-        			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
-        		</tr>
-        		</table>
-       		</form>
-      	</div>
-       	<button id="buttonNew" class="btn btn-success">New user</button>
-       </div>
+		        		</form>
+		       		</tr>
+		       		<tr>
+		       			<td id="edit-{{user.name}}" colspan="6">
+		       				<div class="container" id="form-edit">
+			         		<form id="form-edit" role="form" action="/edit-user" method="post">
+			         			<table>
+			         			<tr>
+				         			<td><label for="edit-full_name">Full name:</label></td>
+						         	<td><input type="text" id="edit-full_name" name="edit-full_name" value="{{user.full_name}}"/></td>
+					         	</tr>
+					         	<tr>
+				         			<td><label for="edit-email">Email:</label></td>
+					         		<td><input type="email" id="edit-email" name="edit-email" value="{{user.email}}"/></td>
+			         			<tr>
+			         				<td><label for="edit-group">Group:</label>
+				         			<td><select id="edit-group" name="edit-group">
+				         			{% if user.group == 'User' %}
+				         			<option value="User" selected>User</option>
+				         			<option value="Admin">Admin</option>
+				         			{% else %}
+				         			<option value="User">User</option>
+				         			<option value="Admin" selected>Admin</option>
+				         			{% endif %}
+									</select></td>
+				         		</tr>
+				         		<tr>
+				         			<td><label for="edit-password">Password:</label></td>
+					         		<td><input type="password" id="edit-password" name="edit-password"/></td>
+				         		</tr>
+				         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
+				         		<tr>
+				         			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
+				         		</tr>
+				         		</table>
+			         		</form>
+		         		</div>
+		        		</td>
+		       		</tr>
+		       	{% endfor %}
+		       	</table>
+		       	<div class="container" id="form-create">
+		       		<form id="form-create" name="form-create" role="form" action="/create-user" method="post" onsubmit="return validateForm()">
+		       			<table>
+		       			<tr>
+		        			<td><label for="create-name">User name:</label></td>
+			         	<td><input type="text" id="create-name" name="create-name" required/></td>
+		         	</tr>
+		       			<tr>
+		        			<td><label for="create-full_name">Full name:</label></td>
+			         	<td><input type="text" id="create-full_name" name="create-full_name" required/></td>
+		         	</tr>
+		         	<tr>
+		        			<td><label for="create-email">Email:</label></td>
+		         		<td><input type="email" id="edit-email" name="create-email"/></td>
+		       			<tr>
+		       				<td><label for="create-group">Group:</label>
+		        			<td><select id="create-group" name="create-group">
+		        			<option value="User">User</option>
+						<option value="Admin">Admin</option>
+						</select></td>
+		        		</tr>
+		        		<tr>
+		        			<td><label for="create-password">Password:</label></td>
+		         		<td><input type="password" id="create-password" name="create-password" required/></td>
+		        		</tr>
+		        		<tr>
+		        			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
+		        		</tr>
+		        		</table>
+		       		</form>
+		      	</div>
+		       	<button id="buttonNew" class="btn btn-success">New user</button>
+		       </div>
+		  	</div>
+		  	</div>
+	  	</div>
+	  	{{footer|safe}}
   	</div>
-  	</div>
-  	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
