Arreglando fallos y documentado con epydoc

--- a/src/static/css/signin.css
+++ b/src/static/css/signin.css
@@ -38,3 +38,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+div#error_login{
+	margin: auto;
+	text-align: center;
+	width: 300px;
+}
