--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -43,6 +43,11 @@ table, table td, table th{
 	width: 500px;
 }
 
+#input_reg input{
+	margin: auto;
+	width: 400px;
+}
+
 #depth{
 	width: 80px;
 }
