--- a/src/template/index.html
+++ b/src/template/index.html
@@ -63,6 +63,12 @@
 				  </div>
 				  <button type="submit" class="btn btn-default">Go!</button>
 				  <br/><br/>
+				  <div class="form-group" id="input_reg">
+				    <label class="sr-only" for="url">Regular expression</label>
+				    <input type="text" class="form-control" id="reg" name="reg" placeholder="Regular expression">
+				  </div>
+				  
+				  <br/><br/>
 				  <table>
 					  <tr>
 					  	<th>Web standards</th>
