--- a/src/template/login.html
+++ b/src/template/login.html
@@ -29,7 +29,11 @@
 	        </div>
 	        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 	      </form>
-	
+	      {% if error_message != '' %}
+	      <div id="error_login" class="alert alert-danger">
+			<p>{{error_message}}</p>
+		  </div>
+		 {% endif %}
 	    </div> <!-- /container -->
 	</body>
 </html>
